<resources>
    <string name="app_name" translatable="false">Pigs In A Pen</string>
    <string name="appNameDisplay">PIGS IN A PEN</string>
    <string name="settings">Settings</string>
    <string name="opponent">OPPONENT</string>
    <string name="gridSize">GRID SIZE</string>
    <string name="humanOpponent">VS. HUMAN</string>
    <string name="computerOpponent">VS. COMPUTER</string>
    <string name="playerOneName">Player One</string>
    <string name="playerTwoName">Player Two</string>
    <string name="playButton">PLAY</string>
    <string name="nameError">Please enter a name</string>
    <string name="gameOver">Game Over</string>
    <string name="mainMenu">Main Menu</string>
    <string name="statistics">Statistics</string>
    <string name="quickPlay">Quick Play</string>
    <string name="newGame">NEW GAME</string>
    <string name="gamesWon">Games Won</string>
    <string name="gamesLost">Games Lost</string>
    <string name="gamesPlayed">Games Played</string>
    <string name="highestScore">Highest Score</string>
</resources>
