<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_background2"
    tools:context=".ActivityStatistics">


    <ImageView
        android:id="@+id/gobackMain"
        android:layout_width="41dp"
        android:layout_height="53dp"
        android:onClick="goBackToMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/goback" />


    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="70dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toTopOf="@+id/statisticsBackgroundWood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rope" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="78dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toTopOf="@+id/statisticsBackgroundWood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rope" />

    <ImageView
        android:id="@+id/statisticsBackgroundWood"
        android:layout_width="250dp"
        android:layout_height="82dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        app:srcCompat="@drawable/clipart_wooden_plank" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:text="@string/statistics"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="@+id/statisticsBackgroundWood"
        app:layout_constraintEnd_toEndOf="@+id/statisticsBackgroundWood"
        app:layout_constraintStart_toStartOf="@+id/statisticsBackgroundWood"
        app:layout_constraintTop_toTopOf="@+id/statisticsBackgroundWood" />

    <ImageView
        android:id="@+id/soundButton"
        android:layout_width="41dp"
        android:layout_height="53dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/sound_on" />


    <ImageButton
        android:id="@+id/decreaseGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:onClick="changeGridSize"
        app:layout_constraintBottom_toBottomOf="@+id/gridSizeText"
        app:layout_constraintEnd_toStartOf="@+id/gridSizeText"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gridSizeText"
        app:srcCompat="@drawable/backarrow" />

    <TextView
        android:id="@+id/gridSizeText"
        android:layout_width="130dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statisticsBackgroundWood" />

    <ImageButton
        android:id="@+id/increaseGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:onClick="changeGridSize"
        app:layout_constraintBottom_toBottomOf="@+id/gridSizeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/gridSizeText"
        app:layout_constraintTop_toTopOf="@+id/gridSizeText"
        app:srcCompat="@drawable/forwardarrow" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridSizeText">

        <TextView
            android:id="@+id/gamesWonView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/gamesWon"
            android:textColor="#000000"
            android:textSize="20sp"
            app:fontFamily="serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gamesLostView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/gamesLost"
            android:textColor="#000000"
            android:textSize="20sp"
            app:fontFamily="serif"
            app:layout_constraintBottom_toTopOf="@+id/GamesPlayedView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gamesWon" />

        <TextView
            android:id="@+id/GamesPlayedView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/gamesPlayed"
            android:textColor="#000000"
            android:textSize="20sp"
            app:fontFamily="serif"
            app:layout_constraintBottom_toTopOf="@+id/highestScoreView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gamesLostView" />

        <TextView
            android:id="@+id/highestScoreView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/highestScore"
            android:textColor="#000000"
            android:textSize="20sp"
            app:fontFamily="serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/gamesWon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="20sp"
            app:fontFamily="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gamesLost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="20sp"
            app:fontFamily="serif"
            app:layout_constraintBottom_toTopOf="@+id/gamesPlayed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gamesWon" />

        <TextView
            android:id="@+id/gamesPlayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="20sp"
            app:fontFamily="serif"
            app:layout_constraintBottom_toTopOf="@+id/highestScore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gamesLost" />

        <TextView
            android:id="@+id/highestScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            android:textColor="#000000"
            android:textSize="20sp"
            app:fontFamily="serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>